--- a/app.json
+++ b/app.json
@@ -16,7 +16,17 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router", 
+      "expo-font", 
+      "expo-web-browser",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Esta aplicación necesita acceso a la ubicación para mostrar entregas cercanas."
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
