--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
     "expo-location": "^18.1.6",
+    "expo-notifications": "^0.31.4",
     "expo-permissions": "^14.4.0",
     "expo-router": "~5.0.2",
     "expo-splash-screen": "~0.30.6",
